Fix color for title + spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -78,6 +78,7 @@ img {
 	align-items: flex-start;
 }
 
+
 /* smallHeader */
 a.text-dark.logo { 
     text-decoration: none;
@@ -185,7 +186,7 @@ form {
 	padding: 5px;
 	padding: 0 20px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 	border-radius: 0;
 }
 
@@ -193,6 +194,12 @@ form {
 	background: transparent;
     color: white;
 }
+
+.profileFlex h5 {
+	color: white;
+	margin-bottom: 20px;
+}
+
 
 
 /* HEADER */
